Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -6,7 +6,7 @@
 
 \usepackage[margin=1.5cm]{geometry}
 
-
+\usepackage{graphicx}
 
 %%%%%
 % variable to include comments or not in the compilation ; set to 1 to include
@@ -196,7 +196,7 @@ To illustrate the generic nature of our methodology, we apply it here to an othe
 \begin{figure}
 \centering
 %
-\caption{Meta phase diagram, i.e. phase diagram of phase diagram behavior, along parameters of spatial configuration generation ($\alpha$,$n_D$,$\beta$,$N_G$) \todo{described these somewhere}, aggregated for each as an Earth Mover Distance to a fixed reference (phase diagram of Fig.~\ref{fig:sugarscape-phasediagram}).}
+\caption{Meta phase diagram, i.e. phase diagram of phase diagram behavior, along parameters of spatial configuration generation ($\alpha$,$n_D$,$\beta$,$N_G$) (described these somewhere), aggregated for each as an Earth Mover Distance to a fixed reference (phase diagram of Fig.~\ref{fig:sugarscape-phasediagram}).}
 \label{fig:sugarscape-meta}
 \end{figure}
 %%%%%%%%%%%%%%%
