--- a/paper.tex
+++ b/paper.tex
@@ -172,12 +172,14 @@ Et on met le mod{\`e}le plus sioux avec toutes les réplications dans plein de c
 
 To illustrate the generic nature of our methodology, we apply it here to an other model implying a spatialized distribution of resources for which agents compete: the ``Sugarscape'' model, introduced in~\cite{epstein1996growing}. We extend the implementation with agents wealth distribution of~\cite{li2009netlogo}.
 
+Basic parameters if the sugarscape model on which phase diagrams are computed are: agent population $N$, agent minimal ressource $s_{min}$ and agent maximal ressource $s_{max}$.
+
 
 %%%%%%%%%%%%%%%
 \begin{figure}
 \centering
 \includegraphics[width=\textwidth]{figures/fixed_phase_diagram}
-\caption{Phase diagram of the sugarscape model (final smoothed Gini indicator), for a basic bicentric spatial setup, with varying parameters population $N$, minimal sugar reload $s_{min}$ and maximal sugar reload $s_{max}$.}
+\caption{Phase diagram of the sugarscape model (final smoothed Gini indicator), for a basic bicentric spatial setup, with varying parameters population $N$, minimal sugar reload $s_{min}$ and maximal sugar reload $s_{max}$. For each parameter point, average is taken over 50 repetitions.}
 \label{fig:sugarscape-phasediagram}
 \end{figure}
 %%%%%%%%%%%%%%%
@@ -186,8 +188,8 @@ To illustrate the generic nature of our methodology, we apply it here to an othe
 %%%%%%%%%%%%%%%
 \begin{figure}
 \centering
-%\includegraphics[width=\textwidth]{}
-\caption{Phase diagrams varying across the container morphological space. Around 10000 realistic ressources distribution were generated, and used as container landscape (patches sugar capacity) for the sugarscape model. Spatial configurations were classified by reducing the dimension from four morphological indicators to two principal components ($\simeq$80\% of variance), for which the resulting space was gridded into 10x10 bins. We show here for each cell the average phase diagram along $(N,s_{min})$, taken at $s_{max}=200$.}
+\includegraphics[width=\textwidth]{figures/phasediagrams_pca_maxSugar200}
+\caption{Phase diagrams varying across the container morphological space. 50 realistic ressources distributions were generated, and used as container landscape (patches sugar capacity) for the sugarscape model, and phase diagrams were computed as in Fig.~\ref{fig:sugarscape-phasediagram} for each one. Spatial configurations were classified by reducing the dimension from four morphological indicators to two principal components ($\simeq$80\% of variance), for which the resulting space was gridded into 5x5 bins. We show here for each cell the average phase diagram along $(N,s_{min})$, taken at $s_{max}=200$. Other values of $s_{max}$ provide similar qualitative variations. The two missing cells correspond to non-feasible cells in the morphological space for the given generating model and parameters.}
 \label{fig:sugarscape-meta}
 \end{figure}
 %%%%%%%%%%%%%%%
