--- a/spacematters.bib
+++ b/spacematters.bib
@@ -1,47 +1,3 @@
-@book{EpsteinAxtell1996,
-  title={Growing artificial societies: Social science from the bottom up (complex adaptive systems)},
-  author={Epstein, Joshua M and Axtell, Robert L},
-  year={1996},
-  publisher={Brookings Institution Press MIT Press}
-}
-
-@book{Batty2007,
-  title={Cities and complexity: understanding cities with cellular automata, agent-based models, and fractals},
-  author={Batty, Michael},
-  year={2007},
-  publisher={The MIT press}
-}
-
-@inproceedings{Raimbault2014,
-  title={A Hybrid Network/Grid Model of Urban Morphogenesis and Optimization},
-  author={Raimbault, Juste and Banos, Arnaud and Doursat, Ren{\'e}},
-  booktitle={4th International Conference on Complex Systems and Applications (ICCSA 2014)},
-  pages={51--60},
-  year={2014},
-  organization={M. A. Aziz-Alaoui, C. Bertelle, X. Z. Liu, D. Olivier}
-}
-
-@article{Schelling1969,
-  title={Models of segregation},
-  author={Schelling, Thomas C},
-  journal={The American Economic Review},
-  volume={59},
-  number={2},
-  pages={488--493},
-  year={1969},
-  publisher={JSTOR}
-}
-@article{LeNechet2015,
-	title = {De la forme urbaine {\` a}  la structure m{\' e}tropolitaine: une typologie de la configuration interne des densit{\' e}s pour les principales m{\' e}ropoles europ{\' e}ennes de l'{Audit} {Urbain}},
-	shorttitle = {De la forme urbaine {\` a}  la structure m{\' e}tropolitaine},
-	url = {http://cybergeo.revues.org/26753},
-	urldate = {2015-04-21},
-	journal = {Cybergeo: European Journal of Geography},
-	author = {Le N{\' e}chet, Florent},
-	year = {2015},
-	file = {[HTML] Ã  partir de revues.org:/Users/clementinecottineau/Library/Application Support/Zotero/Profiles/i69s0sxq.default/zotero/storage/EX2IAUZ4/26753.html:text/html}
-}
-
 @article{Banos2012,
 	title = {Network effects in {Schelling}'s model of segregation: new evidences from agent-based simulation},
 	volume = {39},
@@ -54,7 +10,26 @@
 	year = {2012},
 	note = {00007},
 	pages = {393--405},
-	file = {[PDF] Ã  partir de archives-ouvertes.fr:/Users/clementinecottineau/Library/Application Support/Zotero/Profiles/i69s0sxq.default/zotero/storage/3BW6P3DU/Banos - 2012 - Network effects in Schelling's model of segregatio.pdf:application/pdf;Snapshot:/Users/clementinecottineau/Library/Application Support/Zotero/Profiles/i69s0sxq.default/zotero/storage/7KN288A6/hal-00469727.html:text/html}
+	file = {[PDF] Ã  partir de archives-ouvertes.fr:/Users/clementinecottineau/Library/Application Support/Zotero/Profiles/i69s0sxq.default/zotero/storage/3BW6P3DU/Banos - 2012 - Network effects in Schelling's model of segregatio.pdf:application/pdf;Snapshot:/Users/clementinecottineau/Library/Application Support/Zotero/Profiles/i69s0sxq.default/zotero/storage/7KN288A6/hal-00469727.html:text/html}
+}
+
+@book{Batty2007,
+  title={Cities and complexity: understanding cities with cellular automata, agent-based models, and fractals},
+  author={Batty, Michael},
+  year={2007},
+  publisher={The MIT press}
+}
+
+@article{Castellanoetal2009,
+	title = {Statistical physics of social dynamics},
+	volume = {81},
+	url = {https://arxiv.org/abs/0710.3256},
+	urldate = {2017-02-05},
+	journal = {Reviews of Modern Physics},
+	author = {Castellano, Claudio and Fortunato, Santo and Loreto, Vittorio},
+	year = {2009},
+	pages = {591-646},
+	file = {[PDF] https://arxiv.org/abs/0710.3256}
 }
 
 @techreport{CicconeHall1996,
@@ -65,7 +40,34 @@
 	author = {Ciccone, Antonio and Hall, Robert E.},
 	year = {1993},
 	note = {02487},
-	file = {[PDF] Ã  partir de crei.eu:/Users/clementinecottineau/Library/Application Support/Zotero/Profiles/i69s0sxq.default/zotero/storage/74UJJCV9/Ciccone and Hall - 1993 - Productivity and the density of economic activity.pdf:application/pdf;Snapshot:/Users/clementinecottineau/Library/Application Support/Zotero/Profiles/i69s0sxq.default/zotero/storage/XVEQD4UM/w4313.html:text/html}
+	file = {[PDF] Ã  partir de crei.eu:/Users/clementinecottineau/Library/Application Support/Zotero/Profiles/i69s0sxq.default/zotero/storage/74UJJCV9/Ciccone and Hall - 1993 - Productivity and the density of economic activity.pdf:application/pdf;Snapshot:/Users/clementinecottineau/Library/Application Support/Zotero/Profiles/i69s0sxq.default/zotero/storage/XVEQD4UM/w4313.html:text/html}
+}
+
+@book{EpsteinAxtell1996,
+  title={Growing artificial societies: Social science from the bottom up (complex adaptive systems)},
+  author={Epstein, Joshua M and Axtell, Robert L},
+  year={1996},
+  publisher={Brookings Institution Press MIT Press}
+}
+
+@article{Fagioloetal2007,
+	title = {Segregation in networks},
+	volume = {64},
+	number = {3-4},
+	journal = {Journal of Economic Behavior \& Organization},
+	author = {Fagiolo, Giorgio and Valente, Marco and Vriend, Nicolaas J.},
+	year = {2007},
+	pages = {316-336}
+}
+
+@article{FlacheHegselmann2001,
+	title = {Do Irregular Grids make a Difference? Relaxing the Spatial Regularity Assumption in Cellular Models of Social Dynamics},
+	volume = {4},
+	number = {4},
+	journal = { Journal of Artificial Societies and Social Simulation},
+	author = {Flache, A. and Hegselmann, R.},
+	year = {2001},
+	pages = {1-6}
 }
 
 @article{FossettDietrich2009,
@@ -80,6 +82,36 @@
 	pages = {149--169}
 }
 
+@article{Gauvinetal2009,
+	title = {Phase diagram of a Schelling segregation model},
+	volume = {70},
+	journal = {The European Physical Journal B},
+	author = {Gauvin, Laetitia and Vannimenus, Jean and Nadal, Jean-Pierre},
+	year = {2009},
+	pages = {293-304}
+}
+
+@article{Gauvinetal2010,
+	title = {Schelling segregation in an open city: a kinetically constrained Blume-Emery-Griffiths spin-1 system},
+	volume = {81},
+    number = {6},
+    shorttitle = {Schelling segregation in an open city},
+	journal = {Physical Review E},
+	author = {Gauvin, Laetitia and Nadal, Jean-Pierre and Vannimenus, Jean},
+	year = {2010},
+	pages = {}
+}
+
+@article{HatnaBenenson2012,
+	title = {The Schelling Model of Ethnic Residential Dynamics: Beyond the Integrated - Segregated Dichotomy of Patterns},
+	volume = {15},
+    number = {1},
+	journal = {Journal of Artificial Societies and Social Simulation},
+	author = {Hatna, Erez and Benenson, Itzhak},
+	year = {2012},
+	pages = {1-6}
+}
+
 @article{LauriJaggi2003,
 	title = {Role of'vision'in neighbourhood racial segregation: a variant of the {Schelling} segregation model},
 	volume = {40},
@@ -90,6 +122,55 @@
 	year = {2003},
 	note = {00115},
 	pages = {2687--2704}
+}
+
+@article{LeNechet2015,
+	title = {De la forme urbaine {\` a}  la structure m{\' e}tropolitaine: une typologie de la configuration interne des densit{\' e}s pour les principales m{\' e}ropoles europ{\' e}ennes de l'{Audit} {Urbain}},
+	shorttitle = {De la forme urbaine {\` a}  la structure m{\' e}tropolitaine},
+	url = {http://cybergeo.revues.org/26753},
+	urldate = {2015-04-21},
+	journal = {Cybergeo: European Journal of Geography},
+	author = {Le N{\' e}chet, Florent},
+	year = {2015},
+	file = {[HTML] Ã  partir de revues.org:/Users/clementinecottineau/Library/Application Support/Zotero/Profiles/i69s0sxq.default/zotero/storage/EX2IAUZ4/26753.html:text/html}
+}
+
+@inproceedings{Raimbault2014,
+  title={A Hybrid Network/Grid Model of Urban Morphogenesis and Optimization},
+  author={Raimbault, Juste and Banos, Arnaud and Doursat, Ren{\'e}},
+  booktitle={4th International Conference on Complex Systems and Applications (ICCSA 2014)},
+  pages={51--60},
+  year={2014},
+  organization={M. A. Aziz-Alaoui, C. Bertelle, X. Z. Liu, D. Olivier}
+}
+
+@article{Schelling1969,
+  title={Models of segregation},
+  author={Schelling, Thomas C.},
+  journal={The American Economic Review},
+  volume={59},
+  number={2},
+  pages={488--493},
+  year={1969},
+  publisher={JSTOR}
+}
+
+@book{Schelling1978,
+  title={Micromotives and Macrobehavior},
+  author={Schelling, Thomas C.},
+  year={1978},
+  publisher={Norton},
+  address={New York}
+}
+
+@article{Singhetal2009,
+  title={Schelling’s Segregation Model: Parameters, scaling, and aggregation},
+  author={Singh, Abhinav and Vainchtein, Dmitri and Weiss, Howard},
+  journal={Demographic Research},
+  volume={21},
+  number={12},
+  pages={341–366},
+  year={2009},
 }
 
 @article{SpielmanHarrison2014,
@@ -103,4 +184,33 @@ title = {The {Co}-evolution of {Residential} {Segregation} and the {Built} {Envi
 	author = {Spielman, Seth and Harrison, Patrick},
 	year = {2014},
 	pages = {25--45}
+}
+
+@article{StaufferSolomon2007,
+	title = {Ising, Schelling and self-organising segregation},
+	volume = {57},
+	url = {https://link.springer.com/article/10.1140/epjb/e2007-00181-8},
+	number = {4},
+	urldate = {2017-05-03},
+	journal = {The European Physical Journal B},
+	author = {Stauffer, D. and Solomon, S.},
+	year = {2007},
+	pages = {473-479}
+}
+
+@article{Thomasetal2017,
+author = {Thomas, Isabelle and Jones, Jonathan and Caruso, Geoffrey and Gerber, Philippe},
+title = {City delineation in European applications of LUTI models: review and tests},
+journal = {Transport Reviews},
+volume = {0},
+number = {0},
+pages = {1-27},
+year = {2017},
+doi = {10.1080/01441647.2017.1295112},
+URL = { 
+        http://www.tandfonline.com/doi/abs/10.1080/01441647.2017.1295112
+	},
+eprint = { 
+        http://www.tandfonline.com/doi/pdf/10.1080/01441647.2017.1295112
+    }
 }
