Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -1,35 +1,5 @@
-\documentclass[11pt]{article}
+\documentclass[Afour,sageh,times]{sagej}
 \input{header.tex}
-
-\date{}
-\renewcommand\abstractname{\fontsize{14pt}{0}\textbf{Abstract}\selectfont}
-
-\usepackage[left=25mm, right=25mm, top=25mm, bottom=25mm, includehead=false, includefoot=false]{geometry}
-
-\usepackage{graphicx}
-\usepackage{url}
-\usepackage[round,semicolon]{natbib}  % Citation styles https://www.sharelatex.com/learn/Natbib_citation_styles
-\bibliographystyle{humannat}
-\renewcommand{\bibsection}{}
-\renewcommand{\bibhang}{\setlength{-1px}}
-
-
-\usepackage{authblk} % For author lists
-\renewcommand\Authfont{\fontsize{11}{1}\selectfont}
-\renewcommand\Affilfont{\fontsize{9}{1}\selectfont}
-
-\renewcommand*\footnoterule{}
-
-\usepackage[table]{xcolor}
-\usepackage[parfill]{parskip} % Line between paragraphs
-\usepackage{amsmath}
-\pagenumbering{arabic} 
-
-\usepackage{sectsty}
-\allsectionsfont{\sffamily}
-
-\usepackage[pdftex]{hyperref} 
-\hypersetup{pdfborder={0 0 0} }
 
 
 % **************  TITLE AND AUTHOR INFORMATION **************
