--- a/header.tex
+++ b/header.tex
@@ -1,3 +1,15 @@
+
+\usepackage{moreverb,url}
+
+\usepackage[colorlinks,bookmarksopen,bookmarksnumbered,citecolor=red,urlcolor=red]{hyperref}
+
+\newcommand\BibTeX{{\rmfamily B\kern-.05em \textsc{i\kern-.025em b}\kern-.08em
+T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
+
+\def\volumeyear{2017}
+
+
+
 %%%%%
 % variable to include comments or not in the compilation ; set to 1 to include
 \def \draft {1}
@@ -32,4 +44,39 @@
 \newcommand{\todo}[1]{
 \ifthenelse{\draft=1}{\textcolor{red!50!blue}{\textbf{TODO : \textit{#1}}}}{}
 }
+
+
+
+
+\date{}
+\renewcommand\abstractname{\fontsize{14pt}{0}\textbf{Abstract}\selectfont}
+
+\usepackage[left=25mm, right=25mm, top=25mm, bottom=25mm, includehead=false, includefoot=false]{geometry}
+
+\usepackage{graphicx}
+\usepackage{url}
+\usepackage[round,semicolon]{natbib}  % Citation styles https://www.sharelatex.com/learn/Natbib_citation_styles
+\bibliographystyle{humannat}
+\renewcommand{\bibsection}{}
+\renewcommand{\bibhang}{\setlength{-1px}}
+
+
+\usepackage{authblk} % For author lists
+\renewcommand\Authfont{\fontsize{11}{1}\selectfont}
+\renewcommand\Affilfont{\fontsize{9}{1}\selectfont}
+
+\renewcommand*\footnoterule{}
+
+\usepackage[table]{xcolor}
+\usepackage[parfill]{parskip} % Line between paragraphs
+\usepackage{amsmath}
+\pagenumbering{arabic} 
+
+\usepackage{sectsty}
+\allsectionsfont{\sffamily}
+
+%\usepackage[pdftex]{hyperref} 
+%\hypersetup{pdfborder={0 0 0} }
+
+
 
